--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <meta name="twitter:image"
       content="https://www.payzonitservices.com/design/images/payzon%20(2).png" />
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
-    <script src="assets/js/images.js"></script>
+<script type="module" src="assets/js/images.js"></script>
   </head>
 
   <body>
@@ -2631,8 +2631,9 @@
       }
     </style>
     </veepn-lock-screen>
-    <script src="./assets/js/script.js"></script>
-    <script src="./script.js"></script>
+<script type="module" src="./assets/js/script.js"></script>
+<!-- <script type="module" src="./script.js"></script> -->
+
 
   </body>
 
